--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
           <div>
             <p class="form-link">
               Create New Account ?
-              <a href="./signup.php" class="form-link">Signup</a>
+              <a href="./signup.html" class="form-link">Signup</a>
             </p>
           </div>
         </form>
