--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
       <div class="form-container">
         <form
           class="form"
-          action="<?php echo $_SERVER['PHP_SELF'] ?>"
+          
           method="POST"
         >
           <!-- <div class="error-msg-container">
@@ -64,7 +64,7 @@
           <div>
             <p class="form-link">
               Already having account ?
-              <a href="./login.php" class="form-link">Login</a>
+              <a href="./login.html" class="form-link">Login</a>
             </p>
           </div>
         </form>
