--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             class="card-img"
             alt="product image"
           />
-          <p>Pine Apple</p>
-          <p>100</p>
-          <p>10kg left</p>
-          <p>Juicy and sweet pineapple grown in Maharashtra.</p>
+          <p class="product-name">Pine Apple</p>
+          <p class="product-price">100</p>
+          <p class="product-left">10kg left</p>
+          <p class="description">Juicy and sweet pineapple grown in Maharashtra.</p>
         </div>
 
         <!-- card 2 -->
