--- a/signup.html
+++ b/signup.html
@@ -13,11 +13,7 @@
   <body>
     <div class="bg-wrapper">
       <div class="form-container">
-        <form
-          class="form"
-          
-          method="POST"
-        >
+        <form class="form" method="POST">
           <!-- <div class="error-msg-container">
                     <p class="error-msg">Error Message</p>
                 </div>
@@ -71,4 +67,5 @@
       </div>
     </div>
   </body>
+  <script src="./js/signup.js" defer></script>
 </html>
