--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <nav>
-      <img src="assets\logo.png" class="logo" />
+      <div class="logo-container">
+        <img src="assets\logo.png" class="logo" />
+        <h1 class="logo-title">HarvestHub</h1>
+      </div>
 
       <div class="details">
         <p>Name</p>
