--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,8 @@
     <section class="cart-section">
       <h1>Shopping Cart</h1>
       <div class="line"></div>
-      <table>
+      <div style="overflow-x:auto;">
+      <table class="table">
         <thead>
           <th class="thead prod-des-col">Product Details</th>
           <th class="thead">Quantity</th>
@@ -113,6 +114,8 @@
           </div>
         </tfoot>
       </table>
+      </div>
+      <input type="submit" value="Checkout" class="checkout-btn" />
     </section>
   </body>
 </html>
