--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
+    <script>
+      function redirectToCart() {
+        window.location.href = "cart.html";
+      }
+    </script>
   </head>
   <body>
     <nav>
@@ -23,7 +28,7 @@
 
       <div class="details">
         <p>Name</p>
-        <div title="Cart">
+        <div title="Cart" onclick="redirectToCart()" class="cart-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -40,7 +45,7 @@
           </svg>
         </div>
 
-        <div title="Logout">
+        <div title="Logout" class="logout-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -61,59 +66,59 @@
     <section class="cart-section">
       <h1>Shopping Cart</h1>
       <div class="line"></div>
-      <div style="overflow-x:auto;">
-      <table class="table">
-        <thead>
-          <th class="thead prod-des-col">Product Details</th>
-          <th class="thead">Quantity</th>
-          <th class="thead">Price</th>
-          <th class="thead">Total</th>
-        </thead>
-        <tbody>
-          <tr class="prod-row">
-            <td class="tab-col">
-              <div class="prod-details-col">
-                <img
-                  src="https://a-z-animals.com/media/2022/08/iStock-1214372574.jpg"
-                  class="prod-img"
-                />
-                <div class="prod-details">
-                  <p class="prod-name">Pine Apple</p>
-                  <p class="prod-desc">
-                    Juicy and sweet pineapple grown in Maharashtra.
-                  </p>
-                  <p class="prod-remove">Remove</p>
+      <div class="table-wrapper">
+        <table class="table">
+          <thead>
+            <th class="thead prod-des-col">Product Details</th>
+            <th class="thead">Quantity</th>
+            <th class="thead">Price</th>
+            <th class="thead">Total</th>
+          </thead>
+          <tbody>
+            <tr class="prod-row">
+              <td class="tab-col">
+                <div class="prod-details-col">
+                  <img
+                    src="https://a-z-animals.com/media/2022/08/iStock-1214372574.jpg"
+                    class="prod-img"
+                  />
+                  <div class="prod-details">
+                    <p class="prod-name">Pine Apple</p>
+                    <p class="prod-desc">
+                      Juicy and sweet pineapple grown in Maharashtra.
+                    </p>
+                    <p class="prod-remove">Remove</p>
+                  </div>
                 </div>
-              </div>
-            </td>
-            <td class="tab-col">
-              <div class="quantity-col">
-                <button>+</button>
-                <p>1</p>
-                <button>-</button>
-              </div>
-            </td>
-            <td class="tab-col">
-              <p class="prod-price">₹ 100</p>
-            </td>
-            <td>
-              <p class="prod-total">₹ 100</p>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <div class="t-foot">
-            <tr>
-              <td colspan="3" class="tfoot">
-                <h3 class="total">Total</h3>
               </td>
-              <td class="tfoot">
-                <p class="total-price">₹ 100</p>
+              <td class="tab-col">
+                <div class="quantity-col">
+                  <button>+</button>
+                  <p>1</p>
+                  <button>-</button>
+                </div>
+              </td>
+              <td class="tab-col">
+                <p class="prod-price">₹ 100</p>
+              </td>
+              <td>
+                <p class="prod-total">₹ 100</p>
               </td>
             </tr>
-          </div>
-        </tfoot>
-      </table>
+          </tbody>
+          <tfoot>
+            <div class="t-foot">
+              <tr>
+                <td colspan="3" class="tfoot">
+                  <h3 class="total">Total</h3>
+                </td>
+                <td class="tfoot">
+                  <p class="total-price">₹ 100</p>
+                </td>
+              </tr>
+            </div>
+          </tfoot>
+        </table>
       </div>
       <input type="submit" value="Checkout" class="checkout-btn" />
     </section>
