--- a/cart.html
+++ b/cart.html
@@ -18,6 +18,7 @@
         window.location.href = "cart.html";
       }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <nav>
@@ -123,4 +124,5 @@
       <input type="submit" value="Checkout" class="checkout-btn" />
     </section>
   </body>
+  <script src="./js/cart.js" defer></script>
 </html>
