--- a/cart.html
+++ b/cart.html
@@ -75,37 +75,8 @@
             <th class="thead">Price</th>
             <th class="thead">Total</th>
           </thead>
-          <tbody>
-            <tr class="prod-row">
-              <td class="tab-col">
-                <div class="prod-details-col">
-                  <img
-                    src="https://a-z-animals.com/media/2022/08/iStock-1214372574.jpg"
-                    class="prod-img"
-                  />
-                  <div class="prod-details">
-                    <p class="prod-name">Pine Apple</p>
-                    <p class="prod-desc">
-                      Juicy and sweet pineapple grown in Maharashtra.
-                    </p>
-                    <p class="prod-remove">Remove</p>
-                  </div>
-                </div>
-              </td>
-              <td class="tab-col">
-                <div class="quantity-col">
-                  <button>+</button>
-                  <p>1</p>
-                  <button>-</button>
-                </div>
-              </td>
-              <td class="tab-col">
-                <p class="prod-price">₹ 100</p>
-              </td>
-              <td>
-                <p class="prod-total">₹ 100</p>
-              </td>
-            </tr>
+          <tbody class="items-wrapper">
+            
           </tbody>
           <tfoot>
             <div class="t-foot">
