--- a/cart.html
+++ b/cart.html
@@ -84,8 +84,8 @@
                 <td colspan="3" class="tfoot">
                   <h3 class="total">Total</h3>
                 </td>
-                <td class="tfoot">
-                  <p class="total-price">₹ 100</p>
+                <td class="tfoot" id="price">
+                  
                 </td>
               </tr>
             </div>
