delete search added

--- a/cart.html
+++ b/cart.html
@@ -75,18 +75,14 @@
             <th class="thead">Price</th>
             <th class="thead">Total</th>
           </thead>
-          <tbody class="items-wrapper">
-            
-          </tbody>
+          <tbody class="items-wrapper"></tbody>
           <tfoot>
             <div class="t-foot">
               <tr>
                 <td colspan="3" class="tfoot">
                   <h3 class="total">Total</h3>
                 </td>
-                <td class="tfoot" id="price">
-                  
-                </td>
+                <td class="tfoot" id="price"></td>
               </tr>
             </div>
           </tfoot>
