--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
       function redirectToCart() {
         window.location.href = "cart.html";
       }
-
-      
     </script>
   </head>
   <body>
@@ -30,7 +28,7 @@
         <h1 class="logo-title">HarvestHub</h1>
       </div>
       <div class="details">
-        <p>Name</p>
+        <p class="username" id="username">Name</p>
         <div title="Cart" onclick="redirectToCart()" class="cart-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -47,7 +45,7 @@
             ></path>
           </svg>
         </div>
-        <div title="Logout" class="logout-icon" >
+        <div title="Logout" class="logout-icon">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
