--- a/cart.html
+++ b/cart.html
@@ -17,12 +17,16 @@
       function redirectToCart() {
         window.location.href = "cart.html";
       }
+
+      function redirectToHome() {
+        window.location.href = "index.html";
+      }
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <nav>
-      <div class="logo-container">
+      <div class="logo-container" onclick="redirectToHome()">
         <img src="assets\logo.png" class="logo" />
         <h1 class="logo-title">HarvestHub</h1>
       </div>
