favicon icon added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik&amp;display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>HarvestHub</title>
