--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
@@ -22,6 +23,10 @@
         <form action="" class="form" id="form">
           <div class="msg-container">
             <p class="msg">Error Message</p>
+          </div>
+          <div class="logo-container">
+            <img src="./assets/logo.png" alt="logo" class="login-logo" />
+            <h1 class="logo-title">HarvestHub</h1>
           </div>
           <h1 class="login-title">Log in</h1>
           <div class="input-field-cotainer">
