--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="./styles/login.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="icon" type="image/png" href="./assets/logo.png" />
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
@@ -18,6 +19,10 @@
         <form class="form" method="POST" id="form">
           <div class="msg-container">
             <p class="msg">Error Message</p>
+          </div>
+          <div class="logo-container">
+            <img src="./assets/logo.png" alt="logo" class="login-logo" />
+            <h1 class="logo-title">HarvestHub</h1>
           </div>
           <h1 class="login-title">Sign up</h1>
           <div class="input-field-cotainer">
